# status-aggregator

./: Cargo.toml  Dockerfile  LICENSE
.github/workflows/: docker-image.yml
src/: main.rs
