[package]
name = "status-aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
kube = "0.99.0"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
